# starter-airflow

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
dags/: dag_postgres.py  dag_simplest_test.py  dbt_basic_dag.py  test_dag.py  test_dag2.py  xcom_json_example_dag.py  xcom_pandas_example_dag.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/models/: customers.sql  orders.sql
dbt_project/models/staging/: stg_customers.sql  stg_orders.sql  stg_payments.sql
include/: xcom_backend_json.py
