[tool.poetry]
name = "starter_airflow"
version = "0.1.0"
description = "Starter repository for Airflow CI/CD with Restack"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
apache-airflow-providers-google = "^10.15.0"
lxml = "^5.1.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
