[tool.poetry]
name = "starter_airflow"
version = "0.1.0"
description = "Starter repository for Airflow CI/CD with Restack"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
apache-airflow-providers-google = "^10.15.0"
lxml = "^5.1.0"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
black = "^22.12.0"
flake8 = "^6.0.0"
pylint = "^2.15.9"
isort = "^5.11.4"

[tool.black]
line-length = 88
skip-string-normalization = true


[tool.isort]
multi_line_output = 3
line_length = 88
force_grid_wrap = 0
combine_as_imports = true
force_sort_within_sections = true
include_trailing_comma = true
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
